# Waggle-mcp

./: .codexignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  glama.json  pyproject.toml  render.yaml  server.json  smithery.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: check-label-refs.yml  ci.yml  hol-plugin-scanner.yml  package-claude-desktop-extension.yml  publish-image.yml  publish-vscode-extension.yml  release-binaries.yml  release-codex-plugin-runtime.yml  sync-labels.yml
.kiro/specs/rmca-research-infrastructure/: design.md  requirements.md  tasks.md
apps/mcp/claude-desktop-extension/: manifest.json  package-lock.json  package.json
apps/mcp/graph-ui/: README.md  package-lock.json  package.json  vite.config.js
apps/mcp/graph-ui/src/: App.jsx
apps/mcp/graph-ui/src/lib/: boot-config.js  graph-utils.spec.js
apps/mcp/graph-ui/tests/: gating.spec.js  studio-flows.spec.js  workflows.spec.js
apps/vscode-extension/: .vscode-test.mjs  .vscodeignore  CHANGELOG.md  README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json
apps/vscode-extension/resources/: bundle-metadata.json
apps/vscode-extension/scripts/: asset-map.json  generate-bundle-metadata.mjs  test-platform.mjs  test-regression.mjs  validate-commands.js
apps/vscode-extension/src/: binary-resolver.ts  cache-version.ts  commands.ts  exec.ts  extension.ts  graph-studio-view.ts  mcp-client.ts  mcp-config.ts  platform.ts  server-manager.ts  server-port.ts  spawn-env.ts  trusted-config.ts
apps/vscode-extension/src/test/: extension.test.ts
benchmark_results/: failure_analysis.md  rlm_style_waggle_results.csv  rlm_style_waggle_results.md  rlm_style_waggle_summary.json
benchmarks/: answer_level_eval.py  failure_analysis.py  make_research_report.py  rlm_style_waggle_eval.py  run_ablation.py  run_budget_scaling.py
benchmarks/longmemeval/: results_graph_hybrid_2026-04-25c.json
benchmarks/token_reduction/: run_benchmark.py
benchmarks/token_reduction/scenarios/: architecture_decisions.json  debugging_session.json  onboarding_questions.json
deploy/kubernetes/: README.md  certificate.yaml  configmap.yaml  deployment.yaml  external-secret.example.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  secret.example.yaml
deploy/observability/: docker-compose.observability.yml  grafana-dashboard.json  prometheus.yml
deploy/observability/grafana-provisioning/dashboards/: provider.yml
docs/: briefing.md  commercial.md  environment-variables.md  good-first-issues.md  graph-concurrency.md  plus-integration.md  reference.md  repository-map.md  traversal-verification.md
docs/deployment/: production.md
docs/install/: README.md  codex.md  vscode.md
docs/research/: rmca_experiment_report.md  rmca_method.md
docs/runbooks/: api-key-rotation.md  backup-restore.md  incident-response.md  onboarding.md  secret-management.md
docs/security/: security-model.md
examples/: codex_config.example.toml
plugins/waggle/: .codexignore  README.md  SECURITY.md
scripts/: backup_restore_drill.py  backup_restore_drill.sh  bench_connection_pool.py  benchmark_token_efficiency.py  bootstrap_waggle_plus.sh  check_markdown_links.py  load_test.py  load_test.sh  sync_version.py
scripts/oolong/: build_clean_oolong_dataset.py  check_overfitting.py  generate_oolong_dataset.py  run_e2e_eval.py  run_map_reduce_eval.py  run_oolong_llm_eval.py
scripts/verification/: patch_aggregate.py  run_context_assembly_benchmark.py  test_aggregate.py  test_query_semantics.py
src/graph_memory/: server.py
src/rlm/: __init__.py
src/rlm/clients/: __init__.py  anthropic.py  azure_openai.py  gemini.py  ollama.py  openai.py
src/rlm/core/: comms_utils.py  rlm.py  types.py
src/rlm/environments/: __init__.py  base_env.py  daytona_repl.py  docker_repl.py  e2b_repl.py  ipython_repl.py  local_repl.py  modal_repl.py  prime_repl.py
src/rlm/logger/: verbose.py
src/rlm/utils/: exceptions.py  parsing.py  prompts.py
src/waggle/: __init__.py  abhi.py  auth.py  chat_runtime.py  config.py  connection_pool.py  context_bundle.py  drive_sync.py  embeddings.py  evidence.py  graph.py  graph_ui.py  intelligence.py  locks.py  logging_utils.py  markdown_vault.py  metrics.py  models.py  neo4j_graph.py  orchestrator.py  plus.py  rate_limit.py  recursive_context.py  rlm.py  runtime_context.py  serializer.py  server.py  token_efficiency_benchmark.py
src/waggle/graph/: __init__.py  base.py  storage.py  transcript.py
src/waggle/hooks/claude_code/: common.py  post_response.py  pre_compact.py  pre_response.py
src/waggle/neo4j/: __init__.py  base.py  mutation.py  transcript.py  traversal.py
src/waggle/retrieval/: __init__.py  hybrid.py
src/waggle/server/: __init__.py  __main__.py  cli.py  drive.py  mcp.py  routes.py  utils.py
src/waggle/static/graph/: app.css  app.js  index.html
templates/waggle-plus/: .gitignore  README.md  pyproject.toml
templates/waggle-plus/src/waggle_plus/: __init__.py  provider.py
templates/waggle-plus/tests/: test_contract.py
tests/: test_abhi_diff_merge.py  test_backfill.py  test_comms_utils.py  test_connection_pool.py  test_context_bundle.py  test_dedup.py  test_demo.py  test_diff_merge_fixes.py  test_distribution_cli.py  test_drive_sync.py  test_edges.py  test_embeddings.py  test_errors.py  test_evidence.py  test_export_import_v2.py  test_graph.py  test_graph_ui_boot_config.py  test_hooks.py  test_hybrid_retrieval.py  test_ingest_transcript_handoff.py  test_metrics.py  test_models.py  test_neo4j_stubs.py  test_neo4j_transcript_temporal_parity.py  test_observe_conversation_refactor.py  test_packaging_metadata.py  test_platform.py  test_rate_limit.py  test_recency.py  test_recursive_context.py  test_rlm_style_waggle_eval.py  test_rmca_research.py  test_runtime_context.py  test_server.py  test_stdio_integration.py  test_temporal_validity.py  test_token_efficiency_benchmark.py  test_valid_to.py
tests/artifacts/: README.md  benchmark_current.json  benchmark_current.md
