[project]
name = "waggle-mcp"
version = "0.1.14"
description = "MCP server that gives LLMs persistent graph-structured memory"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Abhigyan Shekhar" }
]
keywords = ["mcp", "knowledge-graph", "memory", "llm", "context"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "anthropic>=0.75.0",
  "anyio>=4.4.0",
  "cryptography>=45.0.0",
  "google-api-python-client>=2.170.0",
  "google-auth>=2.40.0",
  "google-genai>=1.56.0",
  "mcp>=1.0.0",
  "networkx>=3.2.1",
  "numpy>=1.26.0",
  "openai>=2.14.0",
  "portkey-ai>=2.1.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.2.1",
  "python-louvain>=0.16",
  "pyvis>=0.3.2",
  "requests>=2.32.5",
  "rich>=13.0.0",
  "sentence-transformers>=2.6.0",
  "starlette>=0.37.2",
  "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://pypi.org/project/waggle-mcp/"
Documentation = "https://pypi.org/project/waggle-mcp/"
Changelog = "https://pypi.org/project/waggle-mcp/#history"

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
]
neo4j = [
  "neo4j>=5.20.0",
]
rlm-ipython = [
  "dill>=0.3.7",
  "ipykernel>=6.0.0",
  "ipython>=8.0.0",
  "jupyter_client>=8.0.0",
]
rlm-modal = [
  "dill>=0.3.7",
  "modal>=0.73.0",
]
rlm-e2b = [
  "dill>=0.3.7",
  "e2b-code-interpreter>=0.0.11",
]
rlm-daytona = [
  "daytona>=0.128.1",
  "dill>=0.3.7",
]
rlm-prime = [
  "dill>=0.3.7",
  "prime-sandboxes>=0.2.0",
]

[project.scripts]
waggle-mcp = "waggle.server:main"
waggle = "waggle.server:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
waggle = ["static/graph/*", "static/graph/chunks/*", "static/graph/assets/*"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
